# ai-clinical-trials-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
app/: streamlit_app.py
app/static/: style.css
data/processed/: dataset_summary.json  draft1_answers.json  draft2_refined.json  enriched_master_ai_trials_dataset.csv  ground_truth_dataset.csv  ground_truth_final.json  master_ai_trials_dataset.csv  rag_ready_trials.csv  ragas_results.json  retrieval_evaluation_details.json  retrieval_evaluation_summary.json
data/queries/: aact_query.sql
data/raw/: sample_queries.json
data/raw/fda_labels/: anamorelin hydrochloride_label.json  atezolizumab_label.json  bevacizumab_label.json  bintrafusp alfa_label.json  bupivacaine_label.json  canakinumab_label.json  carboplatin_label.json  cemiplimab_label.json  cetirizine_label.json  cisplatin_label.json  datopotamab_label.json  deruxtecan_label.json  docetaxel_label.json  ds-8201a_label.json  durvalumab_label.json  epinephrine_label.json  etoposide_label.json  gefitinib_label.json  hydrazinonicotinamide-peg4-e_label.json  ipilimumab_label.json  irinotecan_label.json  lazertinib_label.json  lenvatinib_label.json  lurbinectedin_label.json  nab-paclitaxel_label.json  nivolumab_label.json  olaparib_label.json  osimertinib_label.json  pafolacianine_label.json  pembrolizumab_label.json  pemetrexed disodium_label.json  pemetrexed_label.json  propofol_label.json  selpercatinib_label.json  sotorasib_label.json  t-dxd_label.json  technetium-99m_label.json  tislelizumab_label.json  topotecan_label.json  toripalimab_label.json  (+2 more)
data/raw/pubmed_semantic_data/: nct_papers_complete.csv
data/raw/pubmed_semantic_data/xml_files/: NCT03088813_38648575.xml  NCT03296163_33914256.xml  NCT03351361_39486424.xml  NCT03409614_36008722.xml  NCT03425643_37272513.xml  NCT03447769_37788412.xml  NCT03515837_39173098.xml  NCT03521154_38828946.xml  NCT03594747_33792623.xml  NCT03631199_40488300.xml  NCT03631706_37597750.xml  NCT03663205_34033975.xml  NCT03703297_39268857.xml  NCT03735121_37268157.xml  NCT03787992_35662408.xml  NCT03800134_37870974.xml  NCT03802240_37156249.xml  NCT03811002_36006678.xml  NCT03829319_40419140.xml  NCT03829332_38159809.xml  NCT03856411_39715755.xml  NCT03866980_35833116.xml  NCT03866993_38309287.xml  NCT03924869_39298144.xml  NCT03976375_40473109.xml  NCT04005716_39738721.xml  NCT04012606_39541202.xml  NCT04035486_37937763.xml  NCT04063163_36166026.xml  NCT04129502_39879577.xml  NCT04158440_38227033.xml  NCT04171284_40386729.xml  NCT04194944_37870973.xml  NCT04205812_40983066.xml  NCT04222972_35973665.xml  NCT04237090_34997314.xml  NCT04241315_39442905.xml  NCT04248829_37379502.xml  NCT04256421_37976444.xml  NCT04351555_34278827.xml  (+30 more)
models/prompts/: README.md
notebooks/: 01_clinical_data_loading.ipynb  02_ingest_to_chroma.ipynb  03_retrieval_strategies.ipynb  04_rag_evaluation.ipynb  05_RAG_Extraction.ipynb  05_structured_extraction.ipynb  06_model_training.ipynb
reports/: installed_packages.txt
scripts/: ingest.py  setup_dev.ps1  setup_dev.sh  test_openrouter.py
src/biotech_rag/: __init__.py  cli.py  config.py
src/biotech_rag/api/: __init__.py  app.py
src/biotech_rag/data/: __init__.py  fda_parser.py  load.py  loaders.py  pdf_processor.py  preprocessors.py  pubmed_parser.py
src/biotech_rag/evaluation/: __init__.py  claim_verification.py  custom_evaluators.py  openrouter_verifiers.py  rag_metrics.py  ragas_runner.py  retrieval_eval.py  retrieval_metrics.py  visualize.py
src/biotech_rag/extraction/: structured_extraction.py
src/biotech_rag/generation/: __init__.py  chains.py  ground_truth.py  llm_clients.py  llm_parsers.py  prompts.py
src/biotech_rag/indexing/: __init__.py  chunkers.py  embedders.py  openrouter_client.py  vectorstore.py
src/biotech_rag/retrieval/: __init__.py  context_retrieval.py  rerankers.py  retrievers.py
src/biotech_rag/utils/: __init__.py  cache.py  logger.py
tests/: conftest.py  test_openrouter.py
tests/test_data/: test_loaders.py
tests/test_evaluation/: test_metrics.py  test_ragas_runner.py
tests/test_generation/: test_chains.py
tests/test_indexing/: test_chunkers.py  test_embedders.py  test_parsers_and_embedders.py
tests/test_retrieval/: test_retrievers.py
